--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -11,8 +11,8 @@
   @include mq.lg {
     align-items: end;
     grid-template-columns: 1fr 1fr;
-    inset-inline: clamp(v.$sp-5, -20.2885rem + 33.6538vw, v.$sp-40);
-    margin-inline: 0;
+
+    margin-inline: clamp(v.$sp-32, 3.0769rem + 7.6923vw, v.$sp-40);
     position: absolute;
     bottom: 0;
   }
@@ -64,6 +64,7 @@
   height: clamp(9rem, 6.1831rem + 12.0188vw, 17rem);
   justify-content: center;
   width: clamp(9rem, 6.1831rem + 12.0188vw, 17rem);
+  transition: all 250ms ease-in;
 
   &:hover {
     box-shadow: 0 0 0 v.$sp-20 rgb(from v.$color-white r g b / 0.15);
