--- a/src/app/technology/page.module.scss
+++ b/src/app/technology/page.module.scss
@@ -5,8 +5,11 @@
 .container {
   @include mq.lg {
     align-items: center;
-    grid-template-columns: max-content 40vw 40vw;
+    grid-template-columns: max-content 35vw 40vw;
     grid-template-rows: min-content 40vh 10vh;
+    padding-inline: calc(clamp(v.$sp-6, 0.5458rem + 4.0712vw, v.$sp-10) * 4) 0;
+
+    width: 100vw;
   }
 }
 
@@ -14,12 +17,13 @@
   @include mq.lg {
     flex-direction: column;
     grid-area: 2/1/3/2;
-    margin-inline-end: v.$sp-16;
+    margin-inline-end: clamp(v.$sp-4, -6.3846rem + 11.5385vw, v.$sp-16);
   }
 }
 
 .tabImg {
   @include mq.lg {
+    align-self: center;
     grid-area: 2/3/4/4;
     grid-row: span 3;
   }
