--- a/src/components/ui/TabImage/TabImage.module.scss
+++ b/src/components/ui/TabImage/TabImage.module.scss
@@ -50,7 +50,7 @@
   }
   @include mq.lg {
     aspect-ratio: 515/527;
-    width: 35vw;
+    width: 40vw;
     justify-self: start;
     right: 0;
   }
